--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "konva": "^9.3.16",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-konva": "^18.2.10",
+    "tesseract.js": "^5.1.1",
+    "use-image": "^1.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
